Adding ID to WeathForecast object - use that as the key when mapping response to JSX elements (instead of index)
