# GhostUI/Models/IWeatherForecast.cs
@@ -2,9 +2,10 @@
 {
     public interface IWeatherForecast
     {
+        int    ID            { get; }
+        int    TemperatureF  { get; }
         int    TemperatureC  { get; set; }
         string DateFormatted { get; set; }
         string Summary       { get; set; }
-        int    TemperatureF  { get; }
     }
 }
